--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 
 <head>
-    <title>박지연 퍼블리싱</title>
+    <title>박지연 퍼블리싱2</title>
     <!-- utf-8로 인코딩하지 않으면 html문서를 브라우저에서 구현할때 글자가 깨져보이는 현상이 발생  -->
     <meta charset="utf-8" />
     <!-- IE=edge : 최신모드로 지정된 DOCTYPE에 상관없이 IE8 이상 버전에서 항상 최신 표준 모드로 렌더링-->
